Closed Bug 710805 Opened 14 years ago Closed 14 years ago

Assert validity in xpc_qsBasicString

Categories

(Core :: XPConnect, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: Ms2ger, Assigned: Ms2ger)

Details

Attachments

(1 file)

Attached patch Patch v1Splinter Review
Calling Ptr or using the string& operator doesn't make sense if initializing the xpc_qsBasicString failed, so we should assert that.
Attachment #581719 - Flags: review?(jst)
Attachment #581719 - Flags: review?(jst) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla12
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: