Bug 710805 - Assert validity in xpc_qsBasicString; r=jst