js/xpconnect/src/XPCQuickStubs.h
@@ -265,11 +265,13 @@ public:
 
     implementation_type *Ptr()
     {
+        MOZ_ASSERT(mValid);
         return reinterpret_cast<implementation_type *>(mBuf);
     }
 
     operator interface_type &()
     {
+        MOZ_ASSERT(mValid);
         return *Ptr();
     }
 
